roxctl/connectivity-diff/testdata/acs-security-demos-new-version/frontend/blog/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: blog 
  namespace: frontend 
  labels:
    app: blog
spec:
  to:
    kind: Service
    name: blog-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
